--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,9 +38,9 @@ deploy.company_name: MONITORING
 
 
 # \uac80\uc0c9\uc5d4\uc9c4
-#local.search_engine:127.0.0.1:9200
+local.search_engine:127.0.0.1:9200
 # docker es01 service name
-local.search_engine:es01:9200
+#local.search_engine:es01:9200
 server.search_engine:127.0.0.1:9200
 
 # Python REST URL
